fixed home alignment and nav issue

--- a/css/generalstyles.css
+++ b/css/generalstyles.css
@@ -158,24 +158,27 @@ main {
 }
 .landscapemedia {
   height: auto;
-  width: 35vw;
+  width: 30vw;
   align-self: center;
 }
 
 /* aside styles*/
 aside {
   background-image: linear-gradient(to right, #46122000, #461220, #461220);
-  width: 20%;
+  width: 15%;
   overflow: hidden;
 }
 aside ul {
+  position: fixed;
   list-style-type: none;
   padding: 0;
   margin-top: 0;
+  right: 0;
   text-wrap: wrap;
   overflow-wrap: break-word;
   overflow: hidden;
   height: 100%;
+  width: 15%;
   background-image: url("/resources/asidebgmirrored.png");
   background-size: 100%;
   background-repeat: repeat-y;
